# set-up-connect4

./: Dockerfile  README.md  app.py  bot.py  bot_2.py  converter.py  requirements.txt  test.py
conv/: .gitignore  Cargo.toml  arrayboard.py  bitboard.py  lib.py  main.py  opening_database.py  solver.py  tranposition_table.py
conv/src/: arrayboard.rs  lib.rs  opening_database.rs  solver.rs  transposition_table.rs
