[package]
name = "connect4_ai"
version = "0.1.0"
authors = ["Anvnhat"]
edition = "2021"  # Updated to 2021 edition for better PyO3 compatibility

[lib]
name = "connect4_ai"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # Required for Python bindings

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
anyhow = "1.0"
static_assertions = "1.1"
rayon = "1.4"
byteorder = "1.3"
indicatif = "0.17"
crossterm = "0.29.0"

# Development profiles (optimized builds even in debug)
[profile.dev]
opt-level = 3  # Faster development builds

[profile.release]
opt-level = 3  # Maximum optimization
lto = true     # Link-time optimization
codegen-units = 1  # Better optimization
